fix layout on small screens

--- a/styles/flash-loans.less
+++ b/styles/flash-loans.less
@@ -119,3 +119,22 @@
     }
   }
 }
+
+@media screen and (max-width: @screen-sm) {
+  .fl-earnings,
+  .fl-balance {
+    .ant-card-body {
+      flex-wrap: wrap;
+    }
+    &__left,
+    &__right {
+      width: 100%;
+    }
+    &__small-text {
+      margin-bottom: 0;
+    }
+    &__left {
+      margin-bottom: @margin-sm;
+    }
+  }
+}
