--- a/styles/general.less
+++ b/styles/general.less
@@ -1,3 +1,6 @@
+.ant-layout.ant-layout-has-sider > .ant-layout {
+  width: 100%;
+}
 .spin-container {
   padding: 5rem 0;
   .ant-alert-content {
